[package]
edition = "2021"
name = "misc"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backtrace = { version = "0.3.68", optional = true }
chrono = { version = "0.4.26", optional = true }
env_logger = "0.9"
lettre = { version = "0.10.4", optional = true }
log = "0.4"
nom = { version = "7.1.1", optional = true }
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"], optional = true }

[features]
async = ["tokio"]
nom_err = ["nom"]
panic_handler = ["lettre", "backtrace", "chrono"]
