[package]
edition = "2021"
name = "misc"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", optional = true }
async-trait = { version = "0.1", optional = true }
backtrace = { version = "0.3.68", optional = true }
chrono = { version = "0.4.26", optional = true }
env_logger = { version = "0.11.0", optional = true }
futures = { version = "0.3.28", optional = true }
lettre = { version = "0.11.1", optional = true, default-features = false, features = [
    "smtp-transport",
    "builder",
] }
log = { version = "0.4", optional = true }
nom = { version = "7.1.1", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }
signal-hook = { version = "0.3", optional = true }
signal-hook-tokio = { version = "0.3", optional = true, features = [
    "futures-v0_3",
] }
time = { version = "0.3.28", features = ["macros"] }
tokio = { version = "1", features = ["full"], optional = true }
tracing-appender = { version = "0.2.2", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true, features = [
    "env-filter",
    "time",
] }
# tracing = { version = "0.1.40", optional = true }

[features]
async = ["tokio", "async-trait", "serde", "log", "anyhow"]
nom_err = ["nom", "anyhow"]
panic_handler = ["lettre", "backtrace", "chrono", "log", "anyhow"]
logger = ["env_logger"]
tracing_logger = ["tracing-subscriber", "tracing-appender", "anyhow"]
random = ["rand"]
signals = [
    "tokio",
    "signal-hook",
    "signal-hook-tokio",
    "futures",
    "anyhow",
    "log",
]
config_json = ["async", "serde_json"]
config_toml = ["async", "toml"]
