[package]
edition = "2021"
name = "misc"
version = "0.8.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", optional = true }
backtrace = { version = "0.3.68", optional = true }
chrono = { version = "0.4.26", optional = true }
env_logger = { version = "0.11.0", optional = true }
futures = { version = "0.3.28", optional = true }
log = { version = "0.4", optional = true }
nom = { version = "7.1.1", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }
signal-hook = { version = "0.3", optional = true }
time = { version = "0.3.28", features = ["macros"] }
tokio = { version = "1", features = ["fs", "rt"], optional = true }
tracing-appender = { version = "0.2.2", optional = true }
bincode = { version = "1.3.3", optional = true }
console-subscriber = { version = "0.4.1", optional = true }
bytes = { version = "1.6.0", optional = true }
tokio-util = { version = "0.7.11", optional = true, features = ["io"] }
dirs = { version = "6.0.0", optional = true }

[dependencies.signal-hook-tokio]
version = "0.3"
optional = true
features = ["futures-v0_3"]

[dependencies.lettre]
version = "0.11.1"
optional = true
default-features = false
features = ["smtp-transport", "builder"]

[dependencies.tracing-subscriber]
version = "0.3.17"
optional = true
features = ["env-filter", "time"]

[features]
async = ["tokio/sync", "tokio/macros", "tokio/time", "log"]
nom_err = ["nom", "anyhow"]
panic_handler = ["lettre", "backtrace", "chrono", "log", "anyhow"]
logger = ["env_logger"]
tracing_logger = ["tracing-subscriber", "tracing-appender", "anyhow"]
random = ["rand"]
signals = [
    "tokio/sync",
    "signal-hook",
    "signal-hook-tokio",
    "futures",
    "anyhow",
    "log",
]
config_json = ["serde_json", "anyhow", "serde", "log"]
config_toml = ["toml", "anyhow", "serde", "log"]
config_bin = ["bincode", "anyhow", "serde", "log"]
console = ["console-subscriber"]
sink = ["tokio", "bytes", "futures", "dep:tokio-util"]
temp = ["dep:dirs"]
